--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,19 @@
 body {
   margin: 0;
+  /* padding-right: 10;  */
+
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
 }
+
+
+ul {
+    list-style: none;
+}​
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
