--- a/src/App.css
+++ b/src/App.css
@@ -13,18 +13,6 @@ ul {
   padding: 0;
 }
 
-/* li {
-  display: flex;
-  align-items: center;
-  text-align: center;
-  justify-content: center;
-  list-style: none;
-  font-weight: bold;
-  padding: 10px;
-  background-color: #f3f6f7;
-  font-size: calc(16px + (21 - 16) * ((100vw - 300px) / (1600 - 300)));
-} */
-
 .newspaperTitle {
   color: white;
   background-color: red;
@@ -32,16 +20,13 @@ ul {
   font-family: Arial, Helvetica, sans-serif;
   font: Helvetica;
   padding-right: 5px;
-
+  padding-left: 3px;
 }
-
-/* .headlineTitle {
-
-} */
 
 .container {
   display: grid;
   background-color: #f3f6f7;
+  margin-top:10px;
 }
 
 .content, .overlay {
@@ -49,7 +34,9 @@ ul {
 }
 
 .content {
-  padding-left: 5px;
+  margin-top: -12px;
+  padding-right: 5px;
+  margin-left:5px
 }
 
 .overlay {
@@ -78,7 +65,7 @@ ul {
   text-align: left;
   padding-left: 20px;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(15px + 2vmin);
   font-style: italic;
   font-family: Arial, Helvetica, sans-serif;
   font: Helvetica;
@@ -88,22 +75,102 @@ ul {
   background-color:#ec1701;
 }
 
-#headline-sm {
-  font-size: calc(5px + 2vmin);
-}
-
 .App-link {
   color: #61dafb;
 }
+/* 
+  Media queries below, to handle different-sized screens
+*/
 
-/* @media 
+@media screen and (max-width: 1024px) {
 
-below certain size, change columns to 3, then 1 for mobile
-ul {
-  display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  grid-gap: 1em;
-  margin: 0 auto;
-  max-width: 64em;
-  padding: 0;
-} */
+  .App-header {
+   
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+    text-align: left;
+    padding-left: 40px;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    font-style: italic;
+    font-family: Arial, Helvetica, sans-serif;
+    font: Helvetica;
+    font-weight: 900;
+    /* font-size: 40px; */
+    color: white;
+    background-color:#ec1701;
+  }
+
+  .content {
+    margin-top: -10px;
+    padding-right: 5px;
+
+  }
+
+  body {
+    background-color: white;
+  }
+
+  ul {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 1em;
+    margin: 0 auto;
+    max-width: 64em;
+    padding: 0;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  body {
+    background-color: white;
+  }
+
+  .content {
+    margin-top: -10px;
+    padding-right: -10px;
+  }
+
+  ul {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 1em;
+    margin: 0 auto;
+    max-width: 64em;
+    padding: 0;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  body {
+    background-color:white;
+  }
+
+  .content {
+    margin-top: -10px;
+    padding-left: 5px;
+  }
+
+  .App-header {
+    text-align: center;
+  }
+
+  ul {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 1em;
+    margin: 0 auto;
+    max-width: 64em;
+    padding: 0;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .App-header {
+    /* display: flex;
+    flex-direction: column; */
+    /* text-align: left; */
+    padding-left: 0px;
+  }
+}
