--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,15 @@ body {
   
 }
 
+.btn {
+  background-color: #ec1701; /* Blue background */
+  border: none; /* Remove borders */
+  color: white; /* White text */
+  padding: 12px 16px; /* Some padding */
+  font-size: 16px; /* Set a font size */
+  cursor: pointer; /* Mouse pointer on hover */
+}
+
 
 ul {
     list-style: none;
