--- a/src/App.css
+++ b/src/App.css
@@ -4,25 +4,41 @@
   background-color:#ec1701;
 }
 
+.footer {
+  margin-top: 150px;
+  position: relative;
+  width: 100%;
+}
+
+.copyright {
+  padding-top: 0px;
+  background-color:white;
+  height: 120px;
+}
+
+p.copyright {
+  position: absolute;
+  width: 100%;
+  color:black;
+  line-height: 40px;
+  font-size: 0.7em;
+  text-align: center;
+  bottom:0;
+  font-family: 'Courier New', Courier, monospace;
+}
+
 .button {
-  /* max-width: 70px; */
+  /* padding-top: 20px; */
+  /* padding-bottom: 7px; */
+  /* position: absolute; */
+  width: 100%;
   text-align: center;
-  margin: 0 auto;
-  /* margin-top:-30px; */
-  font-size: calc(8px + 2vmin);
-  font-family: Arial, Helvetica, sans-serif;
-  font: Helvetica;
-  font-style: italic;
-  font-weight: 900;
-  background-color: white;
-  border: none;
-  color: black;
-  padding: 5px 75px 0px 75px;
-  text-align: center;
-  text-decoration: none;
-  font-size: 16px;
-  margin-top: 5px;
+  color:black;
+  background-color:white;
+  font-family: 'Courier New', Courier, monospace;
   cursor: pointer;
+  border: none;
+  outline:none;
 }
 
 .closeButton {
@@ -129,6 +145,7 @@ ul {
   margin: 0px, 20px, 0px, 20px;
   padding-right: 30px;
   padding-left: 30px;
+  margin-bottom: 60px;
 }
 
 .loading {
@@ -158,6 +175,7 @@ ul {
 .App-header {
   /* background-color: #282c34; */
   /* min-height: 5vh; */
+  max-height: 90px;
   display: flex;
   flex-direction: column;
   /* align-items: center; */
