--- a/src/App.css
+++ b/src/App.css
@@ -159,6 +159,8 @@ ul {
   font-size: calc(8px + 2vmin);
   font-family: Arial, Helvetica, sans-serif;
   font: Helvetica;
+  max-width: 300px;
+  margin: 0 auto;
 }
 
 .errorMessage {
