--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,11 @@
   background-color:#ec1701;
 }
 
+a, u {
+  text-decoration: none;
+  color: black;
+}
+
 .footer {
   margin-top: 150px;
   position: relative;
@@ -170,6 +175,7 @@ ul {
   font-family: Arial, Helvetica, sans-serif;
   font: Helvetica;
   font-weight: 900;
+  text-align: center;
   padding: 5px;
   margin-top: 5px;
 }
