take that silly border off updated

--- a/src/App.css
+++ b/src/App.css
@@ -232,9 +232,9 @@ ul {
 
 .updated {
   text-align: center;
-  border-style: solid;
+  /* border-style: solid;
   border-color: black;
-  border-width: 2px;
+  border-width: 2px; */
   padding: 5px;
   max-width: 80px;
   margin: 0 auto;
